[gd_scene load_steps=28 format=2]

[ext_resource path="res://FollowPath.gd" type="Script" id=1]
[ext_resource path="res://SpineAnimator.gd" type="Script" id=2]
[ext_resource path="res://Avoidance.gd" type="Script" id=3]
[ext_resource path="res://NoiseWander.gd" type="Script" id=4]
[ext_resource path="res://PlayerSteering.gd" type="Script" id=5]
[ext_resource path="res://Models/Dodecahedron.tscn" type="PackedScene" id=6]
[ext_resource path="res://Constrain.gd" type="Script" id=8]
[ext_resource path="res://Tank Material.tres" type="Material" id=9]
[ext_resource path="res://Harmonic.gd" type="Script" id=10]
[ext_resource path="res://Boid.gd" type="Script" id=11]
[ext_resource path="res://FPController.gd" type="Script" id=13]
[ext_resource path="res://root.gd" type="Script" id=14]
[ext_resource path="res://Obstacles.gd" type="Script" id=15]
[ext_resource path="res://PathDrawer.gd" type="Script" id=16]
[ext_resource path="res://SceneSwitcher.tscn" type="PackedScene" id=17]
[ext_resource path="res://Obstacle.tscn" type="PackedScene" id=18]

[sub_resource type="PrismMesh" id=5]

[sub_resource type="BoxShape" id=9]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="BoxShape" id=13]

[sub_resource type="BoxShape" id=12]

[sub_resource type="BoxShape" id=11]

[sub_resource type="PrismMesh" id=8]

[sub_resource type="BoxShape" id=10]

[sub_resource type="SphereShape" id=15]

[sub_resource type="Environment" id=14]
background_mode = 1
ambient_light_color = Color( 0.392157, 0.392157, 0.392157, 1 )
ambient_light_energy = 2.0

[sub_resource type="Curve3D" id=16]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, -11.2065, -9.15527e-05, -29.797, 0, 0, 0, 0, 0, 0, -2.83316, 0.000137329, -9.18577, 0, 0, 0, 0, 0, 0, 16.3011, 23.6271, -8.24546, 0, 0, 0, 0, 0, 0, 46.7083, -5.34058e-05, -27.2299, 0, 0, 0, 0, 0, 0, 52.709, 22.523, -0.299791, 0, 0, 0, 0, 0, 0, 61.4845, 0, 43.691, 0, 0, 0, 0, 0, 0, 41.071, 9.53445, 8.45671, 0, 0, 0, 0, 0, 0, 2.29026, 0, 45.1004, 0, 0, 0, 0, 0, 0, 24.8938, -17.113, 20.9767 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0 )
}

[node name="root" type="Spatial"]
script = ExtResource( 14 )

[node name="creature" type="Spatial" parent="."]

[node name="spineanimator" type="Node" parent="creature"]
script = ExtResource( 2 )
bonePaths = [ NodePath("../boid"), NodePath("../body1"), NodePath("../body2"), NodePath("../body3"), NodePath("../tail") ]

[node name="boid" type="KinematicBody" parent="creature"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 12.5154 )
script = ExtResource( 11 )
max_force = 80
damping = 0.3

[node name="MeshInstance" type="MeshInstance" parent="creature/boid"]
transform = Transform( 1, 0, 0, 0, -8.74228e-08, -1, 0, 2, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 5 )
skeleton = NodePath("../../..")
material/0 = ExtResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="creature/boid"]
shape = SubResource( 9 )

[node name="Avoidance" type="Node" parent="creature/boid"]
script = ExtResource( 3 )
weight = 10.0
feeler_length = 15

[node name="Harmonic" type="Node" parent="creature/boid"]
script = ExtResource( 10 )
weight = 3.0
frequency = 0.5
distance = 10
axis = 1

[node name="Constrain" type="Node" parent="creature/boid"]
script = ExtResource( 8 )
weight = 0.1
enabled = false
center_path = NodePath("../../../Obstacles")

[node name="NoiseWander" type="Node" parent="creature/boid"]
script = ExtResource( 4 )
draw_gizmos = false
enabled = false
radius = 50.0
amplitude = 90
distance = 100

[node name="PathFollow" type="Node" parent="creature/boid"]
script = ExtResource( 1 )
weight = 3.0
path_path = NodePath("../../../Path")
waypoint_seek_distance = 5

[node name="UserSteering" type="Node" parent="creature/boid"]
script = ExtResource( 5 )
weight = 15.0
draw_gizmos = false
enabled = false

[node name="body1" type="KinematicBody" parent="creature"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 9 )

[node name="MeshInstance4" type="MeshInstance" parent="creature/body1"]
mesh = SubResource( 1 )
skeleton = NodePath("../../..")
material/0 = ExtResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="creature/body1"]
shape = SubResource( 13 )

[node name="body2" type="KinematicBody" parent="creature"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6 )

[node name="MeshInstance3" type="MeshInstance" parent="creature/body2"]
mesh = SubResource( 1 )
skeleton = NodePath("../../..")
material/0 = ExtResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="creature/body2"]
shape = SubResource( 12 )

[node name="body3" type="KinematicBody" parent="creature"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3 )

[node name="Dodecahedron" parent="creature/body3" instance=ExtResource( 6 )]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 4.8188, 0 )

[node name="MeshInstance2" type="MeshInstance" parent="creature/body3"]
mesh = SubResource( 1 )
skeleton = NodePath("../../..")
material/0 = ExtResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="creature/body3"]
shape = SubResource( 11 )

[node name="tail" type="KinematicBody" parent="creature"]

[node name="MeshInstance" type="MeshInstance" parent="creature/tail"]
transform = Transform( 1, 0, 0, 0, -8.74228e-08, 1, 0, -2, -4.37114e-08, 0, 0, -0.504121 )
mesh = SubResource( 8 )
skeleton = NodePath("")
material/0 = ExtResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="creature/tail"]
shape = SubResource( 10 )
disabled = true

[node name="Player" type="KinematicBody" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.15055, 8.14642, -8.50031 )
script = ExtResource( 13 )
speed = 10.0
move = true

[node name="CollisionShape" type="CollisionShape" parent="Player"]
shape = SubResource( 15 )

[node name="Camera" type="Camera" parent="Player"]
environment = SubResource( 14 )
far = 10000.0

[node name="Listener" type="Listener" parent="Player/Camera"]

[node name="Tween" type="Tween" parent="Player"]

[node name="Tween2" type="Tween" parent="Player"]

[node name="Path" type="Path" parent="."]
transform = Transform( 0.029265, 0, -0.999572, 0, 1, 0, 0.999572, 0, 0.029265, 6.28377, -4.57764e-05, -18.2004 )
curve = SubResource( 16 )
script = ExtResource( 16 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 12.0512, 0.23691 )

[node name="DirectionalLight" type="DirectionalLight" parent="DirectionalLight"]
transform = Transform( 0.646177, 0.763187, 2.01452e-08, 6.97809e-09, -3.23043e-08, 1, 0.763187, -0.646177, -2.61999e-08, 0, 12.0512, 0.23691 )

[node name="DirectionalLight2" type="DirectionalLight" parent="DirectionalLight"]

[node name="DirectionalLight" type="DirectionalLight" parent="DirectionalLight/DirectionalLight2"]
transform = Transform( 0.646177, 0.763187, 2.01452e-08, 6.97809e-09, -3.23043e-08, 1, 0.763187, -0.646177, -2.61999e-08, 0, 12.0512, 0.23691 )

[node name="Obstacles" type="Spatial" parent="."]
script = ExtResource( 15 )
obstacle_scene = ExtResource( 18 )
radius = 30

[node name="SceneSwitcher" parent="." instance=ExtResource( 17 )]

[connection signal="body_entered" from="creature/body3/Dodecahedron" to="Player" method="_on_Dodecahedron_body_entered"]
[connection signal="body_exited" from="creature/body3/Dodecahedron" to="Player" method="_on_Dodecahedron_body_exited"]
